--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -14,5 +14,6 @@
   --ifm-color-primary-lighter: #359962;
   --ifm-color-primary-lightest: #3cad6e;
   --ifm-code-font-size: 95%;
+  --ifm-h4-font-size: 1.25rem;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
