Replace auto generated cards and fix text of Step 3 in getting started page

--- a/src/components/global/DocsCard/styles.module.scss
+++ b/src/components/global/DocsCard/styles.module.scss
@@ -203,6 +203,11 @@ docs-card[disabled]::after {
   .Card--opacity-6 .Card-container {
     opacity: 0.6;
   }
+
+  .full-width-card {
+    max-width: 100%;
+  }
+
   aside docs-card {
     max-width: 240px;
   }
